2.1_004 (2014-??-??):
 - Changed installer to download the compiler-dependent libs.
 - Updated libz to 1.2.8.

2.1_003 (2013-02-10):
 - Updated wxWidgets to 2.9.4.
 - Updated pcre to 8.32.
 - Updated libpng to 1.5.13.
 - Updated freetype to 2.4.11.
 - Updated Cg to 3.1 (April 2012).
 - Updated cegui to 0.7.9.
 - Added Open Asset Import Library (aka assimp) 3.0.

2.1_002 (2012-10-14):
 - Updated libjpeg to 8d.
 - Updated libpng to 1.5.10.
 - Updated libogg to 1.3.0.
 - Updated libvorbis to 1.3.3.
 - Updated freetype to 2.4.9.
 - Updated bullet to 2.80.
 - Updated pcre to 8.20.
 - Updated cegui to 0.7.7.
 - Updated zlib to 1.2.7.
 - Build libs for MinGW gcc 4.6 and 4.7 as well.
 - Dropped support for MinGW gcc 3.4 and 4.4.
 - Changed mingw64 gcc version to 4.5.4.

2.1_001 (2011-05-16):
 - Build more WX libs for MSVC (adv, aui, html, net, xml, xrc).
 - Rebuilt mingw DLLs using newer binutils version.
   Fixes trac issue #905.

2.0_001 (2011-04-23):
 - Updated libpng to 1.5.2.
 - Updated libjpeg to 8c.
 - Updated bullet to 2.78.
 - Updated pcre to 8.12.
 - Updated OpenAL Soft to 1.13.
 - Updated wxWidgets to 2.8.12.

1.9_008 (2010-12-28):
 - Updated cal3d to trunk r507 (aka "0.12").
 - Updated libpng to 1.4.5.
 - Updated freetype to 2.4.4.
 - Updated libogg to 1.2.2.
 - Updated libvorbis to 1.3.2.
 - Updated pcre to 8.11.
 - Updated cegui to 0.7.5.
 - Remove Python <= 2.4 import libs for mingw.

1.9_007 (2010-11-29):
 - Updated libpng to 1.4.4.
 - Updated libjpeg to 8b.
 - Updated freetype to 2.4.3.
 - Updated pcre to 8.10.
 - Updated cegui to 0.7.4.
 - Updated bullet to 2.77.
 - Included x86 and x64 builds of OpenAL Soft 1.12.854.
 - Build libraries for MinGW gcc 4.5 as well.
 - Changed mingw64 gcc version to 4.5.1.
 - Main/support installers now signed.

1.9_006 (2010-05-04):
 - libjpeg struct size mismatch fix.
 - Fixes for static ODE, Freetype on MinGW.

1.9_005 (2010-05-03):
 - Updated Cg to 2.2 February 2010 release.
 - Added BulletSoftBody for VC.